--- a/modulo2/index.html
+++ b/modulo2/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Corderl Moderno</title>
+    <title>Cordel Moderno</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img1">
 
         <p>
             Não é mais como era antes <br>
@@ -44,7 +44,7 @@
 
     <section class="normal">
 
-        <p>
+        <p class="espaço">
             Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -67,8 +67,8 @@
     </section>
 
 
-    <section class="imagem">
-        
+    <section class="imagem" id="img2">
+
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -84,7 +84,7 @@
 
     <section class="normal">
 
-        <p>
+        <p class="espaço">
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
